--- a/utils/build.gradle
+++ b/utils/build.gradle
@@ -7,8 +7,6 @@ group='com.github.briandherbert'
 android {
     compileSdkVersion 28
 
-
-
     defaultConfig {
         minSdkVersion 22
         targetSdkVersion 28
@@ -16,7 +14,6 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-
     }
 
     buildTypes {
@@ -38,6 +35,7 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'com.android.volley:volley:1.1.1'
+    implementation("com.squareup.okhttp3:okhttp:3.12.1")
 }
 repositories {
     mavenCentral()
